--- a/src/app/styles/general.scss
+++ b/src/app/styles/general.scss
@@ -14,3 +14,20 @@ body {
   height: 100vh;
   color: #333;
 }
+
+.link-style {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.font-size-1 {
+  font-size: 1rem;
+}
+
+.font-size-2 {
+  font-size: 1.2rem;
+}
+
+.font-size-3 {
+  font-size: 1.5rem;
+}
